--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "transition"
-version = "1.0.1"
+version = "1.1.0"
 authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
 edition = "2018"
 
@@ -8,7 +8,7 @@ edition = "2018"
 blinkrs = "0.2.1"
 crossbeam-channel = "0.4.0"
 log = "0.4.8"
-anyhow = "1.0.26"
+thiserror = "1.0.9"
 
 [dev-dependencies]
 env_logger = "0.7.1"
