--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "transition"
 version = "1.2.0"
 authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
+description = "Allows to visualise the execution and result of code using LED light blink(1)"
+keywords = ["blink(1)", "blink", "notify"]
+license = "MIT/Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/devzbysiu/transition"
+homepage = "https://github.com/devzbysiu/transition"
+documentation = "https://docs.rs/transition"
 edition = "2018"
 
 [dependencies]
