--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2018"
 
 [dependencies]
 blinkrs = "0.2.1"
+serde = { version = "1.0", features = ["derive"] }
 crossbeam-channel = "0.4.0"
 log = "0.4.8"
 thiserror = "1.0.9"
