--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde = { version = "1.0", features = ["derive"] }
 crossbeam-channel = "0.4.0"
 log = "0.4.8"
 thiserror = "1.0.9"
+doc-comment = "0.3.3"
 
 [dev-dependencies]
 env_logger = "0.7.1"
