--- a/Makefile.toml
+++ b/Makefile.toml
@@ -20,15 +20,24 @@ args = ["clippy", "--all-targets", "--all-features", "--", "-W", "clippy::pedant
 command = "cargo"
 args = ["build", "--release"]
 
+[tasks.coverage]
+clear = true
+command = "cargo"
+args = ["tarpaulin", "--ignore-tests", "-v", "--out", "Xml"]
+
+[tasks.coverage-report]
+clear = true
+command = "cargo"
+args = ["tarpaulin", "--ignore-tests", "-v", "--out", "Html"]
+
+
 [tasks.all]
 dependencies = [
     "format",
     "clippy",
-    "build",
-    "test",
-    "coverage-flow",
     "codecov-flow"
 ]
 
 [env]
 RUST_TEST_THREADS = 1
+CARGO_MAKE_COVERAGE_PROVIDER = "tarpaulin"
