chore: Add libusb installation to cd workflow

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,6 +10,8 @@ jobs:
     name: Publishing to Cargo
     runs-on: ubuntu-latest
     steps:
+      - name: Install libusb-1.0
+        run: sudo apt-get install libusb-1.0
       - uses: actions/checkout@master
       - uses: actions-rs/toolchain@v1
         with:
