--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
 description = "Allows to visualise the execution and result of code using LED light blink(1)"
 keywords = ["blink", "notify"]
-categories = ["visualisation"]
+categories = ["visualization"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/devzbysiu/transition"
