--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Install libusb-1.0
       run: sudo apt-get install libusb-1.0
+    - name: Install cargo-tarpaulin 0.14.3 # TODO: this is the workaround for https://github.com/xd009642/tarpaulin/issues/517
+      run: cargo install cargo-tarpaulin --version 0.14.3
 
     - name: Checkout Repo
       uses: actions/checkout@v2
@@ -28,7 +30,7 @@ jobs:
     - name: Run cargo-make
       uses: actions-rs/toolchain@v1
       with:
-        toolchain: nightly
+        toolchain: stable
         override: true
     - uses: davidB/rust-cargo-make@v1
     - name: Run tests
