--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,20 +12,21 @@ jobs:
     steps:
     - name: Install libusb-1.0
       run: sudo apt-get install libusb-1.0
-    - name: Install cargo-tarpaulin 0.14.3 # TODO: this is the workaround for https://github.com/xd009642/tarpaulin/issues/517
-      run: cargo install cargo-tarpaulin --version 0.14.3
 
     - name: Checkout Repo
       uses: actions/checkout@v2
 
-    - uses: actions/cache@v2
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          ./target
-          !./target/tarpaulin
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+    - name: Clear cargo cache # TODO: this is the workaround for https://github.com/xd009642/tarpaulin/issues/517
+      run: cargo clean
+
+    # - uses: actions/cache@v2
+    #   with:
+    #     path: |
+    #       ~/.cargo/registry
+    #       ~/.cargo/git
+    #       ./target
+    #       !./target/tarpaulin
+    #     key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
     - name: Run cargo-make
       uses: actions-rs/toolchain@v1
