--- a/Makefile.toml
+++ b/Makefile.toml
@@ -21,15 +21,15 @@ command = "cargo"
 args = ["build", "--release"]
 
 # TODO: this is a workaround for linking error https://github.com/xd009642/tarpaulin/issues/517
-[tasks.coverage]
-clear = true
-command = "cargo"
-args = ["tarpaulin", "--ignore-tests", "-v", "--out", "Xml"]
+# [tasks.coverage]
+# clear = true
+# command = "cargo"
+# args = ["tarpaulin", "--ignore-tests", "-v", "--out", "Xml"]
 
-[tasks.coverage-report]
-clear = true
-command = "cargo"
-args = ["tarpaulin", "--ignore-tests", "-v", "--out", "Html"]
+# [tasks.coverage-report]
+# clear = true
+# command = "cargo"
+# args = ["tarpaulin", "--ignore-tests", "-v", "--out", "Html"]
 
 
 [tasks.all]
@@ -41,4 +41,4 @@ dependencies = [
 
 [env]
 RUST_TEST_THREADS = 1
-CARGO_MAKE_COVERAGE_PROVIDER = "tarpaulin"
+# CARGO_MAKE_COVERAGE_PROVIDER = "tarpaulin" TODO: this is a workaround for linking error https://github.com/xd009642/tarpaulin/issues/517
