--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "transition"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
-description = "Allows to visualise the execution and result of code using LED light blink(1)"
+description = "Allows to visualize the execution and result of code using LED light blink(1)"
 keywords = ["blink", "notify"]
 categories = ["visualization"]
 license = "MIT/Apache-2.0"
